# demo-py-llm-instrumentation

./: .env.example  .gitignore  README.md  pyproject.toml
src/demo/: 01_openai_chat.py  02_openai_chat.py  03_build_vector_store.py  04_langchain_rag.py  otel.py
