[project]
name = "demo"
version = "0.1.0"
description = "Demonstrate LLM instrumentation"
authors = [
    { name = "Tim Van Wassenhove", email = "github@timvw.be" }
]
dependencies = [
    "openai>=1.51.2",
    "python-dotenv>=1.0.1",
    "openinference-instrumentation-openai>=0.1.14",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "lancedb>=0.14.0",
    "langchain>=0.3.3",
    "langchain-openai>=0.2.2",
    "unstructured>=0.15.14",
    "langchain-community>=0.3.2",
    "openinference-instrumentation-langchain>=0.1.28",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "arize-phoenix>=5.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/demo"]
